--- a/Draw/Controller/FriendManage/FriendCell.xib
+++ b/Draw/Controller/FriendManage/FriendCell.xib
@@ -113,7 +113,7 @@
 							<object class="IBUILabel" id="1002571854">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{61, 35}, {55, 20}}</string>
+								<string key="NSFrame">{{61, 35}, {36, 20}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="227378708"/>
@@ -123,7 +123,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText"/>
+								<string key="IBUIText">fmeal</string>
 								<object class="NSColor" key="IBUITextColor" id="47339557">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -144,7 +144,7 @@
 							<object class="IBUILabel" id="227378708">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{119, 35}, {63, 20}}</string>
+								<string key="NSFrame">{{99, 35}, {66, 20}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="424371828"/>
@@ -161,16 +161,6 @@
 								<float key="IBUIMinimumFontSize">10</float>
 								<reference key="IBUIFontDescription" ref="493417629"/>
 								<reference key="IBUIFont" ref="550266838"/>
-							</object>
-							<object class="IBUIImageView" id="424371828">
-								<reference key="NSNextResponder" ref="1043728466"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{195, 35}, {20, 20}}</string>
-								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="853163999"/>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 							<object class="IBUIButton" id="853163999">
 								<reference key="NSNextResponder" ref="1043728466"/>
@@ -274,6 +264,36 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
+							<object class="IBUIImageView" id="424371828">
+								<reference key="NSNextResponder" ref="1043728466"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{171, 35}, {20, 20}}</string>
+								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="853163999"/>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
+							<object class="IBUIImageView" id="37844821">
+								<reference key="NSNextResponder" ref="1043728466"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{194, 35}, {20, 20}}</string>
+								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
+							<object class="IBUIImageView" id="197678651">
+								<reference key="NSNextResponder" ref="1043728466"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{217, 35}, {20, 20}}</string>
+								<reference key="NSSuperview" ref="1043728466"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 						</array>
 						<string key="NSFrameSize">{300, 65}</string>
 						<reference key="NSSuperview" ref="923471272"/>
@@ -324,14 +344,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">authImageView</string>
-						<reference key="source" ref="923471272"/>
-						<reference key="destination" ref="424371828"/>
-					</object>
-					<int key="connectionID">19</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">statusLabel</string>
 						<reference key="source" ref="923471272"/>
 						<reference key="destination" ref="768365372"/>
@@ -361,6 +373,30 @@
 						<reference key="destination" ref="1008497734"/>
 					</object>
 					<int key="connectionID">27</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">authImageView1</string>
+						<reference key="source" ref="923471272"/>
+						<reference key="destination" ref="424371828"/>
+					</object>
+					<int key="connectionID">30</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">authImageView2</string>
+						<reference key="source" ref="923471272"/>
+						<reference key="destination" ref="37844821"/>
+					</object>
+					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">authImageView3</string>
+						<reference key="source" ref="923471272"/>
+						<reference key="destination" ref="197678651"/>
+					</object>
+					<int key="connectionID">32</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -398,13 +434,15 @@
 							<reference ref="630427240"/>
 							<reference ref="566096567"/>
 							<reference ref="1002571854"/>
-							<reference ref="424371828"/>
 							<reference ref="150275894"/>
 							<reference ref="377664735"/>
 							<reference ref="853163999"/>
 							<reference ref="768365372"/>
 							<reference ref="227378708"/>
 							<reference ref="1008497734"/>
+							<reference ref="37844821"/>
+							<reference ref="424371828"/>
+							<reference ref="197678651"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -459,6 +497,16 @@
 						<reference key="object" ref="1008497734"/>
 						<reference key="parent" ref="923471272"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">28</int>
+						<reference key="object" ref="37844821"/>
+						<reference key="parent" ref="923471272"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">29</int>
+						<reference key="object" ref="197678651"/>
+						<reference key="parent" ref="923471272"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -471,6 +519,8 @@
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">FriendCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -483,7 +533,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">27</int>
+			<int key="maxID">32</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -503,7 +553,9 @@
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="areaLabel">UILabel</string>
-						<string key="authImageView">UIImageView</string>
+						<string key="authImageView1">UIImageView</string>
+						<string key="authImageView2">UIImageView</string>
+						<string key="authImageView3">UIImageView</string>
 						<string key="avatarView">HJManagedImageV</string>
 						<string key="followButton">UIButton</string>
 						<string key="genderLabel">UILabel</string>
@@ -516,8 +568,16 @@
 							<string key="name">areaLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="authImageView">
-							<string key="name">authImageView</string>
+						<object class="IBToOneOutletInfo" key="authImageView1">
+							<string key="name">authImageView1</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="authImageView2">
+							<string key="name">authImageView2</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="authImageView3">
+							<string key="name">authImageView3</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="avatarView">
