--- a/Draw/Controller/FriendManage/FriendCell~ipad.xib
+++ b/Draw/Controller/FriendManage/FriendCell~ipad.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.SystemVersion">11D50b</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1179</string>
@@ -116,7 +116,7 @@
 							<object class="IBUILabel" id="356031051">
 								<reference key="NSNextResponder" ref="202413765"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{122, 70}, {110, 40}}</string>
+								<string key="NSFrame">{{122, 70}, {70, 40}}</string>
 								<reference key="NSSuperview" ref="202413765"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="951270366"/>
@@ -127,7 +127,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText"/>
+								<string key="IBUIText">fmeal</string>
 								<object class="NSColor" key="IBUITextColor" id="543974528">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -148,7 +148,7 @@
 							<object class="IBUILabel" id="951270366">
 								<reference key="NSNextResponder" ref="202413765"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{238, 70}, {126, 40}}</string>
+								<string key="NSFrame">{{197, 70}, {135, 40}}</string>
 								<reference key="NSSuperview" ref="202413765"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="6079536"/>
@@ -167,21 +167,10 @@
 								<reference key="IBUIFontDescription" ref="413560461"/>
 								<reference key="IBUIFont" ref="36019122"/>
 							</object>
-							<object class="IBUIImageView" id="6079536">
-								<reference key="NSNextResponder" ref="202413765"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{402, 70}, {40, 40}}</string>
-								<reference key="NSSuperview" ref="202413765"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="805188679"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-							</object>
 							<object class="IBUIButton" id="805188679">
 								<reference key="NSNextResponder" ref="202413765"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{448, 32}, {128, 52}}</string>
+								<string key="NSFrame">{{478, 32}, {100, 52}}</string>
 								<reference key="NSSuperview" ref="202413765"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="277999882"/>
@@ -212,10 +201,9 @@
 							<object class="IBUILabel" id="277999882">
 								<reference key="NSNextResponder" ref="202413765"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{448, 32}, {128, 52}}</string>
+								<string key="NSFrame">{{478, 32}, {100, 52}}</string>
 								<reference key="NSSuperview" ref="202413765"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="705623712"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -280,6 +268,37 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
+							<object class="IBUIImageView" id="614209307">
+								<reference key="NSNextResponder" ref="202413765"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{345, 70}, {40, 40}}</string>
+								<reference key="NSSuperview" ref="202413765"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+							</object>
+							<object class="IBUIImageView" id="6079536">
+								<reference key="NSNextResponder" ref="202413765"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{390, 70}, {40, 40}}</string>
+								<reference key="NSSuperview" ref="202413765"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="805188679"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+							</object>
+							<object class="IBUIImageView" id="783723587">
+								<reference key="NSNextResponder" ref="202413765"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{435, 70}, {40, 40}}</string>
+								<reference key="NSSuperview" ref="202413765"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+							</object>
 						</array>
 						<string key="NSFrameSize">{600, 131}</string>
 						<reference key="NSSuperview" ref="512101847"/>
@@ -332,14 +351,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">authImageView</string>
-						<reference key="source" ref="512101847"/>
-						<reference key="destination" ref="6079536"/>
-					</object>
-					<int key="connectionID">17</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">statusLabel</string>
 						<reference key="source" ref="512101847"/>
 						<reference key="destination" ref="277999882"/>
@@ -369,6 +380,30 @@
 						<reference key="destination" ref="14867133"/>
 					</object>
 					<int key="connectionID">26</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">authImageView1</string>
+						<reference key="source" ref="512101847"/>
+						<reference key="destination" ref="614209307"/>
+					</object>
+					<int key="connectionID">29</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">authImageView2</string>
+						<reference key="source" ref="512101847"/>
+						<reference key="destination" ref="6079536"/>
+					</object>
+					<int key="connectionID">30</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">authImageView3</string>
+						<reference key="source" ref="512101847"/>
+						<reference key="destination" ref="783723587"/>
+					</object>
+					<int key="connectionID">31</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -411,8 +446,10 @@
 							<reference ref="356031051"/>
 							<reference ref="935325760"/>
 							<reference ref="862850764"/>
-							<reference ref="6079536"/>
 							<reference ref="14867133"/>
+							<reference ref="783723587"/>
+							<reference ref="6079536"/>
+							<reference ref="614209307"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -466,6 +503,16 @@
 						<reference key="object" ref="14867133"/>
 						<reference key="parent" ref="512101847"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">27</int>
+						<reference key="object" ref="614209307"/>
+						<reference key="parent" ref="512101847"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">28</int>
+						<reference key="object" ref="783723587"/>
+						<reference key="parent" ref="512101847"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -477,6 +524,8 @@
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">FriendCell</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -490,7 +539,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">26</int>
+			<int key="maxID">31</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -510,7 +559,9 @@
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="areaLabel">UILabel</string>
-						<string key="authImageView">UIImageView</string>
+						<string key="authImageView1">UIImageView</string>
+						<string key="authImageView2">UIImageView</string>
+						<string key="authImageView3">UIImageView</string>
 						<string key="avatarView">HJManagedImageV</string>
 						<string key="followButton">UIButton</string>
 						<string key="genderLabel">UILabel</string>
@@ -523,8 +574,16 @@
 							<string key="name">areaLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="authImageView">
-							<string key="name">authImageView</string>
+						<object class="IBToOneOutletInfo" key="authImageView1">
+							<string key="name">authImageView1</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="authImageView2">
+							<string key="name">authImageView2</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="authImageView3">
+							<string key="name">authImageView3</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="avatarView">
