--- a/Draw/Controller/Common/CommonUserInfoView.xib
+++ b/Draw/Controller/Common/CommonUserInfoView.xib
@@ -39,7 +39,7 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIButton" id="349745706">
 						<reference key="NSNextResponder" ref="627269487"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, -10}, {320, 480}}</string>
 						<reference key="NSSuperview" ref="627269487"/>
 						<reference key="NSNextKeyView" ref="215299453"/>
@@ -77,7 +77,7 @@
 					</object>
 					<object class="IBUIView" id="215299453">
 						<reference key="NSNextResponder" ref="627269487"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">319</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="102507885">
 								<reference key="NSNextResponder" ref="215299453"/>
@@ -91,21 +91,17 @@
 							</object>
 							<object class="IBUIImageView" id="318358717">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 46}, {42, 42}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="396417944"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">face_anger@2x.png</string>
-								</object>
 							</object>
 							<object class="IBUILabel" id="396417944">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{68, 46}, {129, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="349822805"/>
@@ -135,7 +131,7 @@
 							</object>
 							<object class="IBUILabel" id="504840725">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{68, 72}, {30, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="580615044"/>
@@ -165,7 +161,7 @@
 							</object>
 							<object class="IBUILabel" id="580615044">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{106, 74}, {80, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="65130283"/>
@@ -188,7 +184,7 @@
 							</object>
 							<object class="IBUIImageView" id="65130283">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{187, 74}, {63, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="879677637"/>
@@ -198,7 +194,7 @@
 							</object>
 							<object class="IBUIButton" id="349822805">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{187, 42}, {55, 28}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="714977334"/>
@@ -219,7 +215,7 @@
 							</object>
 							<object class="IBUIView" id="879677637">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{14, 106}, {232, 1}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="810220336"/>
@@ -232,7 +228,7 @@
 							</object>
 							<object class="IBUIView" id="461986437">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{14, 195}, {232, 1}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="855251072"/>
@@ -245,7 +241,7 @@
 							</object>
 							<object class="IBUILabel" id="810220336">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 119}, {136, 22}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="25945721"/>
@@ -268,7 +264,7 @@
 							</object>
 							<object class="IBUILabel" id="855251072">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 208}, {136, 22}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="1040292532"/>
@@ -291,7 +287,7 @@
 							</object>
 							<object class="IBUIButton" id="25945721">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 151}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="968379584"/>
@@ -320,7 +316,7 @@
 							</object>
 							<object class="IBUIButton" id="1040292532">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{18, 238}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView"/>
@@ -346,7 +342,7 @@
 							</object>
 							<object class="IBUIButton" id="968379584">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{142, 151}, {100, 26}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="461986437"/>
@@ -365,7 +361,7 @@
 							</object>
 							<object class="IBUILabel" id="714977334">
 								<reference key="NSNextResponder" ref="215299453"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{193, 46}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="215299453"/>
 								<reference key="NSNextKeyView" ref="504840725"/>
@@ -386,15 +382,9 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
-									<double key="pointSize">17</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">17</double>
-									<int key="NSfFlags">16</int>
-								</object>
+								<int key="IBUITextAlignment">1</int>
+								<reference key="IBUIFontDescription" ref="50370816"/>
+								<reference key="IBUIFont" ref="714693437"/>
 							</object>
 						</array>
 						<string key="NSFrame">{{30, 91}, {260, 288}}</string>
@@ -747,10 +737,10 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="face_anger@2x.png">{61, 61}</string>
-			<string key="orange_button@2x.png">{71, 84}</string>
-		</dictionary>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">orange_button@2x.png</string>
+			<string key="NS.object.0">{71, 84}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
